syntax = "proto3";

option csharp_namespace = "Server.Protos";

service BookGrpcService {
    rpc GetBooks(Empty) returns (BookList);
}

message Book {
    string Title = 1;
    string Author = 2;
}

message BookList {
    repeated Book Books = 1;
}

message Empty {}